VEI-839 | Accessibility issue Contrast and section borders

--- a/app/assets/stylesheets/one-stop-shop.css
+++ b/app/assets/stylesheets/one-stop-shop.css
@@ -15,7 +15,7 @@
     flex-basis: 100%;
     margin-bottom: 2em;
     border: 1px solid #dee0e2;
-    background: #f3f2f1;
+    background: #ffffff;
 }
 
 /* Dynamic spinner for please-wait page within file upload journey */
@@ -58,6 +58,7 @@
 @media screen and (min-width: 600px) and (max-width: 900px) {
     .tile {
         flex-basis: 46.99%;
+         margin-bottom: 2%;
     }
     .tile:nth-child(2n-2) {
         margin-left: 2%;
@@ -70,6 +71,7 @@
 @media screen and (min-width: 900px) {
     .tile {
         flex-basis: 31%;
+         margin-bottom: 2%;
     }
     .tile:nth-child(3n-1) {
         margin-left: 3%;
@@ -88,6 +90,11 @@ html[data-useragent*='MSIE 10.0'] .flex-container .tile {
 
 .tile .tile-body {
     border-bottom: 0px;
+    padding: 0px;
+}
+
+.tile .tile-body h2 {
+    background-color: #f3f3f3;
     padding: 12px;
 }
 
@@ -155,4 +162,8 @@ td.oss-vat {
 
 .width-auto {
     width: auto;
+}
+
+.govuk-summary-card__content {
+    padding: 15px 12px;
 }
